<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.example.sauld.pesoideal.Fragment.InformacionFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloIMC"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/inforIMC"
        android:textSize="18sp"
        android:textStyle="bold|italic" />
    <TextView
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titutabla"
        />

    <ImageView
        android:contentDescription="@string/titutabla"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/imc_tablaclasificacion"
        />

    <TextView
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tituloPso"
        android:textSize="35sp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/inforIPso"
        android:textSize="18sp"
        android:textStyle="bold|italic" />


</LinearLayout>
